Fjerner unødvendig logging og fikser diverse sonarcloud feil